# src/api/v1/comment/controllers/create.js
@@ -1,5 +1,55 @@
-const create = (req, res) => {
-  res.send("Hello c");
-}
+const { generateBadRequestError } = require("../../../../utils/error");
+const commentServices = require("../../../../lib/comment");
+const { getTransfromSingleData } = require("../../../../utils/responseData");
+
+const create = async (req, res, next) => {
+  const { text, article } = req.body;
+
+  if (!text || !article) {
+    const error = generateBadRequestError({ text, article });
+    next(error);
+  }
+
+  try {
+    const createdComment = await commentServices.create({
+      text,
+      article,
+      authors: req.user._id,
+    });
+
+    // generate the atuale data for the response
+    const data = getTransfromSingleData({
+      item: createdComment,
+      selection: [
+        "_id",
+        "text",
+        "status",
+        "article",
+        "authors",
+        "updatedAt",
+        "createdAt",
+      ],
+    });
+
+    // generate links
+    const links = {
+      self: `/comments/${createdComment.id}`,
+      authors: `/users/${createdComment.authors._id}`,
+      article: `/articles/${createdComment.article._id}`,
+    };
+
+    const response = {
+      code: 201,
+      data,
+      links,
+    };
+
+    // send final response
+    res.status(201).json(response);
+  } catch (error) {
+    console.log(error);
+    next(error);
+  }
+};
 
 module.exports = create;
